--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,7 @@
         DeepForestGameMessageInfoCarmeraActivity
     </string>
     <string name="title_activity_deep_forest_game_business">DeepForestGameBusinessActivity</string>
+    <string name="title_activity_message_info">MessageInfoActivity</string>
 
 
     <!--Deep Forest Game Use Part-->
